fix small screen spacing for accounts

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -124,49 +124,49 @@ h1.top {
     min-width: 5px;
     max-width: 600px;
     padding-top: 10px;
-  }
 
-  p {
-    line-height: 135%;
-  }
+    p {
+      line-height: 135%;
+    }
 
-  ul {
-    padding-left: 15px;
-  }
+    ul {
+      padding-left: 15px;
+    }
 
-  .accounts {
-    display: block;
-    width: 100%;
-    clear: both;
-    text-align: left;
-    list-style: none;
-    padding: 0;
-    font-size: 50px;
-    margin: 55px 0 65px 0;
+    .accounts {
+      display: block;
+      width: 100%;
+      clear: both;
+      text-align: left;
+      list-style: none;
+      padding: 0;
+      font-size: 50px;
+      margin: 55px 0 65px 0;
 
-    li {
-      display: inline-block;
-      margin-right: 60px;
-      text-align: center;
+      li {
+        display: inline-block;
+        margin-right: 10%;
+        text-align: center;
 
-      .fa-github-alt:hover {
-        color: #E9967A;
-      }
+        .fa-github-alt:hover {
+          color: #E9967A;
+        }
 
-      .fa-linkedin:hover {
-        color: #0077b5;
-      }
+        .fa-linkedin:hover {
+          color: #0077b5;
+        }
 
-      .fa-wordpress:hover {
-        color: #2E8B57;
-      }
+        .fa-wordpress:hover {
+          color: #2E8B57;
+        }
 
-      .icon-looker {
-        font-size: 45px;
-        border-radius: 5px;
+        .icon-looker {
+          font-size: 45px;
+          border-radius: 5px;
 
-        &:hover {
-          color: #710082;
+          &:hover {
+            color: #710082;
+          }
         }
       }
     }
@@ -204,40 +204,65 @@ footer p {
 @media (max-width: 1085px) {
   #about .content {
     max-width: 300px;
+
+    .accounts li {
+      margin-right: 5%;
+    }
   }
+
 }
 
 // mobile support
 
 @media (max-width: 955px) {
-  header #name {
+  header {
+    #name {
     position: relative;
     left: auto;
     display: block;
     margin: 15px auto 0 auto;
-  }
-  header #nav {
-    margin: 15px auto;
+    }
+
+    #nav {
+        margin: 15px auto;
+    }
   }
   #about {
     padding: 75px 0 75px 0;
     height: 725px;
+
+    img {
+        display: block;
+        float: none;
+        margin-left: auto;
+        margin-right: auto;
+      }
   }
-  #about img {
-    display: block;
-    float: none;
-    margin-left: auto;
-    margin-right: auto;
+
+  #about {
+    height: 780px;
+
+    .content {
+      float: none;
+      padding: 0 10% 0 10%;
+      margin: auto;
+      max-width: 600px;
+
+      .fa-ul {
+        padding: 0 8% 0 8%;
+      }
+
+      .accounts {
+        text-align: center;
+        margin-top: 10%;
+
+        li {
+          margin-right: 5%;
+        }
+      }
+    }
   }
-  #about .content {
-    float: none;
-    padding: 0 10% 0 10%;
-    margin: auto;
-    max-width: 600px;
-  }
-  #about ul {
-    padding: 0 8% 0 8%;
-  }
+
   h1 {
     text-align: center;
     }
